changed contact styles to be more similar to work page re: alignment. Fixed tiny nav bug on work page (by having the work toggler reload at click out if work item is already open).

--- a/assets/style.css
+++ b/assets/style.css
@@ -487,14 +487,15 @@ p2 {
 }
 
 #contact-label {
-    width: 250px
+    width: 190px;
+    font-size: 1.8em;
 }
 
 #contact-form {
     display: flex;
     justify-content: flex-start;
     border-left: solid var(--main) 3px;
-    padding-left: 25px;
+    padding-left: 75px;
 }
 
 #name-email {
@@ -518,7 +519,7 @@ p2 {
     width: 330px;
     height: 117%;
     flex-wrap: wrap;
-    margin-left: 15%;
+    margin-left: 50px;
     margin-bottom: 20px;
     animation: 1.2s ease 1.1s normal forwards 1 fade-in;
     opacity: 0;
@@ -529,26 +530,29 @@ p2 {
     margin-top: -9px;
 }
 
-#email-input {
+#email-input, #name-input  {
     font-size: .6em;
     height: 40px;
+    width: 283px;
     padding-top: 5px;
     padding-left: 5px;
 }
 
-#name-input {
+/* #name-input {
     font-size: .6em;
     height: 40px;
+    width: 283px;
     padding-top: 5px;
     padding-left: 5px;
-}
+} */
 
 #message-input{
-    max-width: 330px;
-    min-width: 330px;
-    max-height: 165px;
-    min-height: 165px;
+    max-width: 400px;
+    min-width: 400px;
+    max-height: 202px;
+    min-height: 202px;
     bottom: 0;
+    margin-bottom: 12px;
     font-size: .6em;
     padding-left: 10px;
     padding-right: 5px;
@@ -653,11 +657,11 @@ footer {
     #name-email {
         align-items: center;
         flex-direction: column;
-        width: 330px;
+        width: 100%;
     }
 
     #email-input, #name-input {
-        width: 75%
+        width: 283px;
     }
     
     #email-label {
@@ -912,6 +916,16 @@ footer {
         grid-template-columns: [first] 70% [second];
         grid-template-rows: [first] 200px [second] 200px [third] 200px [fourth] 200px [fifth] 200px [sixth] 200px [seventh] 200px [eighth] 200px [ninth];
 
+    }
+}
+
+@media only screen and (max-width: 450px) {
+
+/* change message input width for smaller screens */
+
+    #message-input {
+        max-width: 350px;
+        min-width: 350px;
     }
 }
 
